--- a/retroAPI/templates/retro/dashboard.html
+++ b/retroAPI/templates/retro/dashboard.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,7 +13,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/master.css">
+    <!-- <link rel="stylesheet" href="{% static 'retro/master.css' %}"> -->
     <style media="screen">
       /* Hide for mobile, show later */
       /*.sidebar {
@@ -51,58 +52,60 @@
       background-color: #428bca;
       }
     </style>
-    <script type="text/javascript">
-    $(document).ready(function(){
-      getTeams();
-      setInterval(function(){
-        getTeams();
-      },1000);
-      function getTeams(){
-        $.ajax({
-          type: 'GET',
-          url: 'http://localhost:8888/retro/json/teams.json',
-          async: true,
-          beforeSend: function(data){
-            // console.log("getting teams");
-          },
-          success:function(data){
-            console.log(data);
-            data.sort(function(a,b){
-              if(a["order"]  <  b["order"]){
-                return -1;
-              }
-              if(a["order"]  >  b["order"]){
-                return 1;
-              }
-              return 0;
-            })
-            $(".teamList").html("")
-            $(".teamDescrptions").html("");
-            for (var i = 0; i < data.length; i++) {
-              $(".teamList").append("<li><a href=\"#\" id=\"" + data[i]["id"]+ "\">" + data[i]["name"]+"</a></li>")
-              $(".teamDescrptions").append("<div class=\"col-md-4\"><div class=\"well\"><h2>" + data[i]["name"]+"</h2><p>" + data[i]["discription"]+"</p><p><a href=\"../TeamDashboard\" role=\"button\" class=\"btn btn-link\" id=\""+ data[i]["id"]+"\">View Notes >></a></div></div>");
-            }
-          }
-        })
-      }
-    })
-    </script>
     <title>Testing</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li><a href="#">Dashboard</a></li>
-          </ul>
-
+          {% if all_teams_list %}
+            {% for team in all_teams_list %}
+              <ul class="nav nav-sidebar">
+                <li><a href="{% url 'retro:dashboardWithTeamId' team.id %}">{{ team.name }}</a></li>
+              </ul>
+            {% endfor %}
+          {% endif %}
           <ul class="nav nav-sidebar teamList">
 
           </ul>
         </div>
         <div class="col-md-10 col-md-offset-2">
           <div class="row">
+            {% if team_details %}
+            <div class="col-md-12">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">{{team_details.name}}</h4>
+                  <p class="card-subtitle mb-2 text-muted">{{team_details.description}}</p>
+                </div>
+              </div>
+              <hr>
+            </div>
+            {% endif %}
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              {% if team_retros %}
+              <h2>Retros</h2>
+              <table class="table table-responsive table-striped">
+                <tbody>
+                  {% for retro in team_retros %}
+                  <tr>
+                    <th scope="row">{{retro.title}}</th>
+                    <td align="right"><a href="#" class="btn btn-info">Review</a>&nbsp;<a href="#" class="btn btn-danger">Delete</a></td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              {% else %}
+              <div class="alert alert-warning">
+                  <center>No Retros Available</center>
+              </div>
+              {% endif %}
+            </div>
+          </div>
+
+          <!-- <div class="row">
             <div class="col-md-12">
                 <h1>All Teams</h1>
                 <hr>
@@ -126,7 +129,7 @@
               </div>
             </div>
             {% endif %}
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
