--- a/retroAPI/templates/retro/newRetro.html
+++ b/retroAPI/templates/retro/newRetro.html
@@ -1,6 +1,20 @@
 {% extends "retro/baseNavigation.html" %}
 
 {% block content %}
-  working
+  <form class="" action="{% url 'retro:addRetro' %}" method="post">
+    {% csrf_token %}
+    <div class="row">
+      <div class="col-md-3">
+        <label for="title">Title</label>
+        <input type="text" name="title" placeholder="Enter Title" class="form-control">
+        {% if team_details %}
+          <input type="hidden" name="teamId" value="{{team_details.id}}">
+        {% endif %}
+      </div>
+    </div>
+    <br>
+    <input type="submit"  class="btn btn-info" value="Submit"/>
+  </form>
+
 {% endblock %}
 { % endblock % }
