--- a/retroAPI/templates/retro/baseNavigation.html
+++ b/retroAPI/templates/retro/baseNavigation.html
@@ -4,6 +4,10 @@
   <head>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+
+    <!-- Charts.jsn -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+    <script type="text/javascript" src="{% static 'retro/chartsData.js' %}"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'retro/font-awesome-4.7.0/css/font-awesome.min.css' %}">
@@ -13,6 +17,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="{% static 'retro/master.css' %}"> -->
+
     <style media="screen">
       /* Hide for mobile, show later */
       /*.sidebar {
@@ -57,7 +62,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-
+          <a href="{% url 'retro:dashboard' %}">Metro Retro</a>
           {% if all_teams_list %}
             <h3>Teams</h3><hr>
             {% for team in all_teams_list %}
@@ -83,9 +88,7 @@
               <hr>
             </div>
           </div>
-          {% block content %}
-
-          {% endblock %}
+          {% block content %}{% endblock %}
         </div>
       </div>
     </div>
