--- a/retroAPI/templates/retro/teamDetails.html
+++ b/retroAPI/templates/retro/teamDetails.html
@@ -34,8 +34,15 @@
       <tbody>
         {% for retro in team_retros %}
         <tr>
-          <th scope="row">{{retro.title}}</th>
-          <td align="right"><a href="#" class="btn btn-info">Review</a>&nbsp;<a href="#" class="btn btn-danger">Delete</a></td>
+          <th scope="row"><a href="{% url 'retro:retroDetails' retro.id %}">{{retro.title}}</a></th>
+          <td align="right">
+            <form class="" action="{% url 'retro:deleteRetro' %}" method="post">
+              {% csrf_token %}
+              <input type="hidden" name="retroId" value="{{retro.id}}">
+              <input type="submit" value="Delete" class="btn btn-danger">
+            </form>
+
+          </td>
         </tr>
         {% endfor %}
       </tbody>
