--- a/retroAPI/templates/retro/baseNavigation.html
+++ b/retroAPI/templates/retro/baseNavigation.html
@@ -78,7 +78,7 @@
           </a>&nbsp;&nbsp;
           <a href="{% url 'retro:logout' %}" class="btn btn-info">Log Out</a>
         </div>
-        <div class="col-md-10 col-md-offset-2">
+        <div class="col-md-10 col-sm-7 col-sm-offset-3 col-md-offset-2">
           <div class="row">
             <div class="col-md-12">
               <div class="card">
