--- a/retroAPI/templates/retro/login.html
+++ b/retroAPI/templates/retro/login.html
@@ -23,6 +23,39 @@
       .freeText{
         color: black;
       }
+
+      body, html{
+          height: 100%,auto;
+          margin: 0;
+      }
+
+      .bg{
+        background-image: url("{% static 'retro/images/collabBackground.jpg'%}");
+        min-height: 100%;
+        min-width: 1024;
+        width: 100%;
+        height: auto;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+
+      .gradiant{
+        min-height: 100%;
+        min-width: 1024;
+        width: 100%;
+        height: auto;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-color: rgba(0, 0, 255, 0.1);
+      }
     </style>
 
     <script type="text/javascript">
@@ -37,12 +70,16 @@
     </script>
   </head>
   <body>
+
+    <div class="bg"></div>
+    <div class="gradiant"><div>
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
           <div class="loginForm top-buffer">
             <div class="row">
-              <div class="col-md-10 col-md-offset-1">
+              <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-6 col-sm-offset-3
+              col-xs-8 col-xs-offset-2">
                 <form action="{% url 'retro:login' %}" method="post">
                   {% csrf_token %}
                   <div class="form-group">
