--- a/retroAPI/templates/retro/teamDetails.html
+++ b/retroAPI/templates/retro/teamDetails.html
@@ -31,17 +31,22 @@
     {% if team_retros %}
     <h2>Retros</h2>
     <table class="table table-responsive table-striped">
+      <thead>
+        <tr>
+          <th>Ttitle</th>
+          <th></th>
+        </tr>
+      </thead>
       <tbody>
         {% for retro in team_retros %}
         <tr>
-          <th scope="row"><a href="{% url 'retro:retroDetails' retro.id %}">{{retro.title}}</a></th>
+          <td scope="row"><a href="{% url 'retro:retroDetails' retro.id %}">{{retro.title}}</a></td>
           <td align="right">
             <form class="" action="{% url 'retro:deleteRetro' %}" method="post">
               {% csrf_token %}
               <input type="hidden" name="retroId" value="{{retro.id}}">
               <input type="submit" value="Delete" class="btn btn-danger">
             </form>
-
           </td>
         </tr>
         {% endfor %}
