--- a/retroAPI/templates/retro/newRetroItem.html
+++ b/retroAPI/templates/retro/newRetroItem.html
@@ -22,6 +22,20 @@
       <input type="hidden" name="retroId" value="{{retro_details.id}}">
       {% endif %}
     </div>
+    <div class="col-md-2">
+        <label for="category">Category</label>
+        <select class="form-control" name="category">
+          {% if all_categories %}
+            {% for category in all_categories %}
+              {% if category.id == item_details.category.id %}
+                <option value="{{category.id}}" selected>{{category.name}}</option>
+              {% else %}
+                <option value="{{category.id}}">{{category.name}}</option>
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+        </select>
+      </div>
   </div>
   <br>
   <div class="row">
