--- a/retroAPI/templates/retro/teamDetails.html
+++ b/retroAPI/templates/retro/teamDetails.html
@@ -18,19 +18,29 @@
 
 {% block content %}
 {% if team_details %}
+
+
 <div class="row">
-  <div class="col-md-12">
-    <a href="{% url 'retro:NewRetro' team_details.id %}" class="btn btn-info">
-      <span class="fa fa-plus"></span>
-      New Retro
-    </a>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
+  {% if team_retros%}
+    {% for retro in team_retros%}
+      <div class="col-md-2">
+        <div class="card" style="margin-bottom: 15px">
+          <!-- <img class="card-img-top" src="" alt="Card image cap"> -->
+          <div class="card-body">
+            <h4 class="card-title">
+              {{retro.title}}
+            </h4>
+            <p class="card-text">Simple description</p>
+            <a href="{% url 'retro:retroDetails' retro.id %}">View Details >></a>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  {% endif %}
+  <!-- <div class="col-md-12">
     {% if team_retros %}
-    <h2>Retros</h2>
-    <table class="table table-responsive table-striped">
+    <h3>Retros</h3>
+    <table class="table table-striped">
       <thead>
         <tr>
           <th>Ttitle</th>
@@ -59,6 +69,14 @@
         <center>No Retros Available</center>
     </div>
     {% endif %}
+
+  </div> -->
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <a href="{% url 'retro:NewRetro' team_details.id %}" class="btn btn-info">
+      <span class="fa fa-plus"></span>
+    </a>
   </div>
 </div>
 {% else %}
