--- a/retroAPI/templates/retro/baseNavigation.html
+++ b/retroAPI/templates/retro/baseNavigation.html
@@ -18,6 +18,13 @@
     <script src="{% static 'retro/bootstrap.min.js' %}"></script>
     <!-- <link rel="stylesheet" href="{% static 'retro/master.css' %}"> -->
 
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.retro-card').each(function(fadeInDiv){
+          $(this).delay(fadeInDiv * 100).fadeIn(1000);
+        })
+      });
+    </script>
     <style media="screen">
       /* Hide for mobile, show later */
       /*.sidebar {
@@ -59,12 +66,32 @@
       .page-headings{
         border: none;
       }
+      .card{
+        margin: 10px;
+        background-color: rgba(0,0,0,0);
+      }
+      .retro-card{
+        display: none;
+      }
+      .bg{
+      position: absolute;
+      width:100%;
+      height:100%;
+      background-size:cover;
+      /*-webkit-filter: blur(4px);
+      -moz-filter: blur(4px);
+      -ms-filter: blur(4px);
+      -o-filter: blur(4px);
+      filter: blur(4px);*/
+      background-color: rgba(144,144,144,0.5);
+      z-index: -1;
+    }
     </style>
     <title>Metro - {% block browserTabTitle %} {% endblock %}</title>
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row contentWrapper">
         <div class="col-sm-3 col-md-2 sidebar">
           <a href="{% url 'retro:dashboard' %}">Metro Retro</a>
           <br><br>
