--- a/retroAPI/templates/retro/baseNavigation.html
+++ b/retroAPI/templates/retro/baseNavigation.html
@@ -20,9 +20,21 @@
 
     <script type="text/javascript">
       $(document).ready(function(){
-        $('.retro-card').each(function(fadeInDiv){
+        $(".retro-card").each(function(fadeInDiv){
           $(this).delay(fadeInDiv * 100).fadeIn(1000);
-        })
+          $(this).hover(function(){
+            var background = $(this).find(".bg");
+            background.animate({
+              "backgroundColor": "rgba(255,255,255, 0.1)"
+            }, 150);
+          },
+          function(){
+            var background = $(this).find(".bg");
+            background.animate({
+              "backgroundColor": "rgba(153,204,255,0.2)"
+            }, 150);
+          });
+        });
       });
     </script>
     <style media="screen">
@@ -73,19 +85,27 @@
       .retro-card{
         display: none;
       }
+
+      /*.retro-card:hover{
+        background-color: white;
+      }*/
       .bg{
-      position: absolute;
-      width:100%;
-      height:100%;
-      background-size:cover;
-      /*-webkit-filter: blur(4px);
-      -moz-filter: blur(4px);
-      -ms-filter: blur(4px);
-      -o-filter: blur(4px);
-      filter: blur(4px);*/
-      background-color: rgba(144,144,144,0.5);
-      z-index: -1;
-    }
+        position: absolute;
+        width:100%;
+        height:100%;
+        background-size:cover;
+        /*-webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -ms-filter: blur(4px);
+        -o-filter: blur(4px);
+        filter: blur(4px);*/
+        background-color: rgba(153,204,255,0.1);
+        z-index: -1;
+      }
+
+      .main-content{
+        margin-top: 15px;
+      }
     </style>
     <title>Metro - {% block browserTabTitle %} {% endblock %}</title>
   </head>
@@ -110,18 +130,9 @@
           <a href="{% url 'retro:logout' %}" class="btn btn-info">Log Out</a>
         </div>
         <div class="col-md-10 col-sm-7 offset-sm-3 offset-md-2">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card page-headings">
-                <div class="card-body">
-                  <h4 class="card-title">{% block pageTitle %} {% endblock %}</h4>
-                  <p class="card-subtitle mb-2 text-muted">{% block pageDiscription %} {% endblock %}</p>
-                </div>
-              </div>
-              
-            </div>
+          <div class="main-content">
+            {% block content %}{% endblock %}
           </div>
-          {% block content %}{% endblock %}
         </div>
       </div>
     </div>
