--- a/retroAPI/templates/retro/login.html
+++ b/retroAPI/templates/retro/login.html
@@ -80,16 +80,16 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-10 col-md-10 col-sm-7 col-xs-10">
+        <div class="col-lg-9 col-md-9 col-sm-7 col-xs-10">
          
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-5 col-xs-2">
+        <div class="col-lg-3 col-md-3 col-sm-5 col-xs-2">
           <div class="row">
             <div class="col-md-12">
-              <div class="card login">
+              <div class="card login" style="width: 20em; float: right">
               <div class="bg"></div>
                 <div class="card-body">
-                    <h4 class="card-title">Project Title</h4>
+                    <h4 class="card-title">Metro Retro</h4>
                     <form action="{% url 'retro:login' %}" method="post">
                   {% csrf_token %}
                   <div class="form-group">
@@ -101,7 +101,7 @@
                   <div class="form-group">
                     <input type="submit" name="submitBtn" value="Log In" class="btn btn-info" id="loginBtn">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="../ForgotPassword/index.html"class="freeText">Forgot Password?</a>
+                    <a href="../ForgotPassword/index.html" class="freeText">Forgot Password?</a>
                   </div>
                 </form>
                 </div>
@@ -110,66 +110,15 @@
           </div>
           <div class="row">
           <div class="col-md-12 col-lg-12 col-sm-10 col-xs-1">
-            <div class="card signup">
+            <div class="card signup" style="width: 20em; float: right;">
               <div class="card-body">
                 <button class="btn btn-info btn-md btn-block">Sign Up</button>
               </div>
             </div>
-            
           </div>
         </div>
         </div>
       </div>
-      
-      <!-- <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-          <div class="loginForm top-buffer">
-            <div class="row">
-              <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-6 col-sm-offset-3
-              col-xs-8 col-xs-offset-2">
-                <form action="{% url 'retro:login' %}" method="post">
-                  {% csrf_token %}
-                  <div class="form-group">
-                    <input type="text" name="username" class="form-control" placeholder="Enter Username">
-                  </div>
-                  <div class="form-group">
-                    <input type="password" name="password" class="form-control" placeholder="Enter Password">
-                  </div>
-                  <div class="form-group">
-                    <input type="submit" name="submitBtn" value="Log In" class="btn btn-success" id="loginBtn">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="../ForgotPassword/index.html"class="freeText">Forgot Password?</a>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-10 col-md-offset-1">
-                {% if error_message %}
-                <div class="alert alert-danger" role="alert">
-                  {{ error_message }}
-                </div>
-                {% endif %}
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
-
-    <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <p>Authenticating</p>
-          </div>
-          <div class="modal-body">
-            <div class="progress">
-              <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </body>
 </html>
