Created User Search for adding team members

--- a/retroAPI/templates/retro/baseNavigation.html
+++ b/retroAPI/templates/retro/baseNavigation.html
@@ -107,6 +107,8 @@
         margin-top: 15px;
       }
     </style>
+
+    {% block localScripts %}{% endblock%}
     <title>Metro - {% block browserTabTitle %} {% endblock %}</title>
   </head>
   <body>
